<resources>
    <string name="app_name">InstaClone</string>
    <string name="edit_profile_name">Name</string>
    <string name="edit_profile_username">Username</string>
    <string name="edit_profile_website">Website</string>
    <string name="edit_profile_email">Email</string>
    <string name="edit_profile_phone">Phone</string>
    <string name="edit_profile_private_information">Private information</string>
    <string name="edit_profile_bio">Bio</string>
    <string name="email">Email</string>
    <string name="log_in">Log In</string>
    <string name="login_sign_up">Don\'t have account? <b>Sign up.</b></string>
    <string name="register">Register</string>
    <string name="password">Password</string>
    <string name="full_name">Full name</string>
    <string name="enter_full_name_and_password">Enter full name and password</string>
    <string name="enter_valid_email">Enter valid email</string>
    <string name="please_enter_email">Please enter email</string>
    <string name="entered_data_is_incorrect">Entered data is incorrect</string>
    <string name="enter_correct_email">Enter correct email</string>
</resources>
