<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="150dp"
        android:text="@string/enter_full_name_and_password"
        android:textColor="@color/black"
        android:textSize="19sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        />

    <EditText
        android:id="@+id/name_input"
        style="@style/login_input"
        android:hint="@string/name"
        android:inputType="textPersonName"
        app:layout_constraintTop_toBottomOf="@id/title"
        />

    <EditText
        android:id="@+id/password_input"
        style="@style/login_input"
        android:hint="@string/password"
        android:inputType="textPassword"
        app:layout_constraintTop_toBottomOf="@id/name_input"
        />

    <Button
        style="@style/login_button"
        android:text="@string/register"
        app:layout_constraintTop_toBottomOf="@id/password_input"
        />

</android.support.constraint.ConstraintLayout>