<?xml version="1.0" encoding="utf-8"?>
<by.grodno.vasili.instaclone.views.KeyboardAwareScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/scroll_view"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".activities.LoginActivity"
        >

        <ImageView
            android:id="@+id/instagram_image"
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:layout_marginStart="50dp"
            android:layout_marginTop="50dp"
            android:layout_marginEnd="50dp"
            android:src="@drawable/instagram_logo"
            app:layout_constraintTop_toTopOf="parent"
            />

        <EditText
            android:id="@+id/email_input"
            style="@style/login_input"
            android:layout_marginTop="50dp"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            app:layout_constraintTop_toBottomOf="@id/instagram_image"
            />

        <EditText
            android:id="@+id/password_input"
            style="@style/login_input"
            android:background="@drawable/login_input_bg"
            android:hint="@string/password"
            android:inputType="textPassword"
            app:layout_constraintTop_toBottomOf="@id/email_input"
            />

        <Button
            android:id="@+id/login_button"
            style="@style/login_button"
            android:onClick="login"
            android:text="@string/log_in"
            app:layout_constraintTop_toBottomOf="@id/password_input"
            />

        <TextView
            android:id="@+id/sign_up_toolbar"
            android:layout_width="match_parent"
            android:layout_height="@dimen/toolbar_height"
            android:background="@drawable/top_border_grey"
            android:gravity="center"
            android:text="@string/login_sign_up"
            app:layout_constraintBottom_toBottomOf="parent"
            android:onClick="startRegister"
            />

    </android.support.constraint.ConstraintLayout>
</by.grodno.vasili.instaclone.views.KeyboardAwareScrollView>